--- a/snakes-and-ladders/client/src/App.css
+++ b/snakes-and-ladders/client/src/App.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Telugu:wght@400;700&display=swap');
 *{
   background-color: #282c34;
+  font-family: 'Roboto', sans-serif;
 }
 
 .telugu-text {
